// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Console className="my-classname" 1`] = `
<Console
  className="my-classname"
  id="uuID"
/>
`;

exports[`UU5.Bricks.Console controlled=false 1`] = `
<Console
  controlled={false}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Console controlled=true 1`] = `
<Console
  id="uuID"
/>
`;

exports[`UU5.Bricks.Console default props 1`] = `
<Console
  id="uuID"
/>
`;

exports[`UU5.Bricks.Console disabled=false 1`] = `
<Console
  id="uuID"
/>
`;

exports[`UU5.Bricks.Console disabled=true 1`] = `
<Console
  disabled={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Console fullTextSearchPriority=0 1`] = `
<Console
  fullTextSearchPriority={0}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Console hidden=false 1`] = `
<Console
  id="uuID"
/>
`;

exports[`UU5.Bricks.Console hidden=true 1`] = `
<Console
  hidden={true}
  id="uuID"
/>
`;

exports[`UU5.Bricks.Console id="myId" 1`] = `
<Console
  id="myId"
/>
`;

exports[`UU5.Bricks.Console mainAttrs=undefined 1`] = `
<Console
  id="uuID"
/>
`;

exports[`UU5.Bricks.Console name="myName" 1`] = `
<Console
  id="uuID"
  name="myName"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="bigBox" 1`] = `
<Console
  id="uuID"
  nestingLevel="bigBox"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="bigBoxCollection" 1`] = `
<Console
  id="uuID"
  nestingLevel="bigBoxCollection"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="box" 1`] = `
<Console
  id="uuID"
  nestingLevel="box"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="boxCollection" 1`] = `
<Console
  id="uuID"
  nestingLevel="boxCollection"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="inline" 1`] = `
<UU5.Bricks.LinkModal
  component={
    <Console
      className={null}
      controlled={true}
      disabled={false}
      hidden={false}
      id="uuID"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    />
  }
>
  Console
</UU5.Bricks.LinkModal>
`;

exports[`UU5.Bricks.Console nestingLevel="page" 1`] = `
<Console
  id="uuID"
  nestingLevel="page"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="smallBox" 1`] = `
<Console
  id="uuID"
  nestingLevel="smallBox"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="smallBoxCollection" 1`] = `
<Console
  id="uuID"
  nestingLevel="smallBoxCollection"
/>
`;

exports[`UU5.Bricks.Console nestingLevel="spa" 1`] = `
<Console
  id="uuID"
  nestingLevel="spa"
/>
`;

exports[`UU5.Bricks.Console pureRender=false 1`] = `
<Console
  id="uuID"
/>
`;

exports[`UU5.Bricks.Console pureRender=true 1`] = `
<Console
  id="uuID"
  pureRender={true}
/>
`;

exports[`UU5.Bricks.Console selected=false 1`] = `
<Console
  id="uuID"
/>
`;

exports[`UU5.Bricks.Console selected=true 1`] = `
<Console
  id="uuID"
  selected={true}
/>
`;

exports[`UU5.Bricks.Console style="padding:8px; borderRadius: 2px" 1`] = `
<Console
  id="uuID"
  style="padding:8px; borderRadius: 2px"
/>
`;

exports[`UU5.Bricks.Console style={"backgroundColor":"red","color":"blue"} 1`] = `
<Console
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Console tooltip="My Tooltip" 1`] = `
<Console
  id="uuID"
  tooltip="My Tooltip"
/>
`;
